--- a/_includes/themes/bootstrap/footer.html
+++ b/_includes/themes/bootstrap/footer.html
@@ -79,7 +79,7 @@
                                     Made with 
                                     <i class="fa fa-heart"></i>
                                     by 
-                                    <a target="_blank" href="https://antoniotrento.github.io">Antonio Trento</a> 
+                                    <a target="_blank" href="https://antoniotrento.net">Antonio Trento</a> 
                                     2018. Icons by <a target="_blank" href="https://icons8.com/">icons8</a>. 
                                     All Rights Reserved
                                 </p>
